siduxcc (0.7.0) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * DO NOT RELEASE YET!

  [ Stefan Lippers-Hollmann ]
  * initial packaging split into siduxcc and siduxcc-kde.
  * change the split into siduxcc (kde) and siduxcc-common (backend + cli
    tools).
  * fix arch distribution.
  * fix package build.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 09 Dec 2007 02:05:29 +0100

siduxcc (0.6.14) unstable; urgency=low

  * update to Standards-Version 3.7.3, no changes necessary.
  * add entry for the debian menu system.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:28:55 +0100

siduxcc (0.6.13) unstable; urgency=low

  * build with -Wl,--as-needed to shut up dpkg-shlibdeps.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 14:36:03 +0100

siduxcc (0.6.12) unstable; urgency=low

  * typos 

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 21 Nov 2007 14:58:01 +0100

siduxcc (0.6.11) unstable; urgency=low

  * console.* moved form siduxcc_kde to libsiduxcc
  * hermes enlarged part 1/2
  * hermes enlarged part 2/2
  * hermes: unique mode for right click
  * siduxcc: software: language bug in function updateHermes fixed
  * consoledialog.h problem fixed. 

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 20 Nov 2007 20:18:50 +0100

siduxcc (0.6.10) unstable; urgency=low

  * siduxcc-kde: start: switch language menuitem added
  * siduxcc-kde: kernel: show new kernels bug fixed
  * siduxcc-kde: "too small window" bug solved
  * siduxcc-kde: po: it activated 

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 19 Nov 2007 18:09:23 +0100

siduxcc (0.6.9) unstable; urgency=low

  * siduxcc_kde: start: Menubar added
  * siduxcc_kde: start: startpage designed
  * polish languages files added

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 18 Nov 2007 21:50:58 +0100

siduxcc (0.6.8) unstable; urgency=low

  * siduxcc_kde: kernel: console bug fixed

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 07 Nov 2007 10:32:41 -0500

siduxcc (0.6.7) unstable; urgency=low
